--- a/example-site/views/dragonfly_api.html
+++ b/example-site/views/dragonfly_api.html
@@ -23,7 +23,9 @@
 			<p><% (title "| Dragonfly web framework") %><p>
 		</div>
 		
-		<% (api-browser) %>
+		<div class="apicontent">
+			<% (api-browser) %>
+		</div>
 		
 		<div class="line-dotted"></div>
 
