--- a/example-site/views/dragonfly_api.html
+++ b/example-site/views/dragonfly_api.html
@@ -23,9 +23,8 @@
 			<p><% (title "| Dragonfly web framework") %><p>
 		</div>
 		
-		<div class="apicontent">
-			<% (api-browser) %>
-		</div>
+		<!-- This inserts a div with id #api-browser -->
+		<% (api-browser) %>
 		
 		<div class="line-dotted"></div>
 
