--- a/example-site/views/dragonfly_views.html
+++ b/example-site/views/dragonfly_views.html
@@ -17,10 +17,10 @@
 			<p><% (title "| Dragonfly web framework") %><p>
 		</div>
 		
-		<h1>Using Templates</h1>
-		<p class="extract">A view is simply a web page, or a page fragment, like a header or footer. In fact, views can flexibly be embedded within other views. In that case we call them partials.</p>
+		<h1>Templates</h1>
+		<p class="extract">In Dragonfly, templates are files that have newLISP code embedded in them. This code is evaluated server-side, generating a final document that's presented to visitors.</p>
 
-		<h2>How to load a view</h2>
+		<h2>The </h2>
 		<p>Example: open Your favorite text-editor and enter the following:</p>
 		<pre class="code">Hello World</pre>
 		<p>Save the file as "hello" into Your views directory. Now open Your browser and navigate to <a href="http://www.example-site.com/hello">example-site.com/hello</a>. That's it!</p>
