--- a/example-site/views/dragonfly_routes.html
+++ b/example-site/views/dragonfly_routes.html
@@ -164,7 +164,7 @@
 		</p>
 		<ol>
 			<li>newLISP's built-in server doesn't set <span class="code">REQUEST_METHOD</span> (currently)</li>
-			<li>Their use is redundant and confusing</li>
+			<li>Their use is redundant and can lead to confusion</li>
 		</ol>
 		<p>
 			To elaborate on point #2, let's take a look at this table (taken from the Ruby on Rails <a href="http://guides.rubyonrails.org/routing.html">routing guide</a>):
