--- a/example-site/views/partials/navigation.html
+++ b/example-site/views/partials/navigation.html
@@ -15,6 +15,9 @@
 				
 				<dt>Templates</dt>
 				<dd><% (link_to  "Creating templates" "dragonfly_views") %></dd>
+				
+				<dt>Plugins</dt>
+				<dd><% (link_to  "Using and creating plugins" "dragonfly_plugins") %></dd>
 			</dl>
 			<dl class="R">
 				<dt>Core API</dt>
