--- a/example-site/includes/css/screen.css
+++ b/example-site/includes/css/screen.css
@@ -119,6 +119,13 @@ body img {
 		font-weight:bold;
 		margin-top:14px;
 	}
+	
+	#content div.resultbox {
+		padding:10px;
+		border:1px solid #DDD;
+		margin-top: 10px;
+		background-color: #EEE;
+	}
 
 	/* Paragraph styles */
 	
@@ -222,6 +229,7 @@ body img {
 		margin-top:10px;
 		padding:10px;
 		background:#333333;
+		border:1px solid #222222;
 		font-family:Courier, mono;
 		font-size:10px;
 		color:#ffffff;
@@ -241,6 +249,7 @@ body img {
 		background:#fff9d8;
 		font-size:12px;
 		color:#000000;
+		border:1px solid #f4e8c7;
 	}
 
 	/* removed to allow use of b tag without upper-casing */
@@ -257,6 +266,7 @@ body img {
 		margin-left:80px;
 		padding:10px;
 		background:#d5e9f6;
+		border:1px solid #c4d8E5;
 		font-size:12px;
 		color:#000000;
 	}
