added a parameter max-items to functions (read-rss-feed) and (read-atom-feed)

--- a/example-site/views/code.html
+++ b/example-site/views/code.html
@@ -39,7 +39,7 @@
 
 		<h2>The last changes</h2>
 		<p>
-		<% (read-atom-feed "http://code.google.com/feeds/p/dragonfly-newlisp/hgchanges/basic") %>	
+		<% (read-atom-feed "http://code.google.com/feeds/p/dragonfly-newlisp/hgchanges/basic", 5) %>	
 		</p>
 
 		
