--- a/example-site/views/dragonfly_twitter.html
+++ b/example-site/views/dragonfly_twitter.html
@@ -20,8 +20,11 @@
 		<h1>Twitter search</h1>
 		<p class="extract">Twitter is a free social networking and micro-blogging service that enables its users to send and read messages known as tweets. Tweets are text-based posts of up to 140 characters displayed on the author's profile page and delivered to the author's subscribers who are known as followers. Senders can restrict delivery to those in their circle of friends or, by default, allow open access. (source: wikipedia.org)
 		</p>
-
-		<% (twitter-search "newlisp" "10") %>
+		
+		<h2>Example search for "newLISP"</h2>
+		<div id="twitter-search">
+			<% (twitter-search "newLISP" "10") %>
+		</div>
 		
 		<div class="line-dotted"></div>
 
