--- a/example-site/views/partials/navigation.html
+++ b/example-site/views/partials/navigation.html
@@ -14,7 +14,7 @@
 				<dd><% (link_to  "Creating your own routes" "dragonfly_create_routes") %></dd>
 				
 				<dt>Templates</dt>
-				<dd><% (link_to  "Creating templates" "dragonfly_views") %></dd>
+				<dd><% (link_to  "Creating templates and views" "dragonfly_views") %></dd>
 				
 				<dt>Plugins</dt>
 				<dd><% (link_to  "Using and creating plugins" "dragonfly_plugins") %></dd>
