--- a/example-site/views/dragonfly_views.html
+++ b/example-site/views/dragonfly_views.html
@@ -105,7 +105,9 @@
 		
 		<h3 class="param">VIEW_EXTENSION</h3>
 		<p>Default value: <span class="code"><b>".html"</b></span></p>
-
+		<p>
+			Used by one of the transformations in <span class="code">Route.Static</span> so that a request to <span class="code">/welcome</span> loads the file <span class="code">/views/welcome.html</span>.
+		</p>
 		<p class="continue"><% (link_to "CONTINUE &raquo;" "dragonfly_plugins") %></p>
 		<div class="clear"></div>
 		<div class="line-dotted"></div>
