finished the guide and updated the about and welcome pages. 0.50 is in sight.

--- a/example-site/views/welcome.html
+++ b/example-site/views/welcome.html
@@ -20,20 +20,20 @@
 		<img src="<%=(web-root "includes/images/dragonfly_header_1.jpg")%>" class="border" alt="Dragonfly" title="Dragonfly" width="474"/>
 		
 		<h1>Introduction</h1>
-		<p class="extract">Dragonfly is a <b>web framework for newLISP</b>. Development started in June 2009. It focuses on <b>speed</b>, small memory consumption and a <b>small learning curve</b>. Other goodies are a plug and play architecture for writing own helpers or modules and a very <b>easy deployment</b>. It's possible to use it with the builtin newLISP webserver.
+		<p class="extract">Dragonfly is a <b>web framework for newLISP</b>. Development started in June 2009. It focuses on <b>speed</b>, small memory consumption and a <b>small learning curve</b>. Other goodies are a plug and play architecture for plugins and a very <b>easy deployment</b>. It's possible to use it with the builtin newLISP webserver.
 		</p>
 		
 		<h2>Ten reasons for tasting Dragonfly...</h2>
 		<ol>
-			<li>You like newLISP</li>
-			<li>You need ultra performance</li>
-			<li>You want a framework with a small memory footprint</li>
-			<li>You hate the rails -like deployment and just want a "transfer to webserver and go"</li>
-			<li>You want a clear and easy-to-use templating language</li>
-			<li>You want partial views in Your templates</li>
-			<li>You want a framework which generates clean and search-friendly URLs</li>
-			<li>You need a framework which is extensible</li>
+			<li>You want performance</li>
+			<li>You want a framework that will run everywhere and is easy to deploy</li>
+			<li>You want a framework that's designer friendly</li>
+			<li>You want a framework that bends to your will, not you to it</li>
+			<li>You want a small memory footprint</li>
 			<li>You want a documented framework</li>
+			<li>You want clean and search-friendly URLs</li>
+			<li>You want to create RESTful APIs</li>
+			<li>You love newLISP</li>
 			<li>And discovering new programming styles</li>
 		</ol>
 		<p>&nbsp;</p>
