Now we load plugins only when they're needed. Reduced memory consumption to 68 kb.

--- a/example-site/views/dragonfly_seo.html
+++ b/example-site/views/dragonfly_seo.html
@@ -21,7 +21,10 @@
 		
 		<p class="extract">A form of online marketing, search engine optimization (or search engine marketing) is the process of making a site and its content highly relevant for both search engines and searchers. Successful search marketing helps a site gain top positioning for relevant words and phrases.
 		</p>
-				
+		
+		<% (DF:activate-plugin "dragonfly_seo") %>
+		<% (DF:activate-plugin "dragonfly_tables") %>
+			
 		<h2>Check description length Results</h2>
 		<% (check-meta-description) %><br/><br/>
 
