--- a/example-site/views/dragonfly_twitter.html
+++ b/example-site/views/dragonfly_twitter.html
@@ -23,6 +23,7 @@
 		
 		<h2>Example search for "newLISP"</h2>
 		<div id="twitter-search">
+			<% (DF:activate-plugin "dragonfly_twitter") %>
 			<% (twitter-search "newLISP" "10") %>
 		</div>
 		
